<resources>
    <string name="app_name">ToDoList</string>
    <string name="titolo"> Title\n</string>
    <string name="oggetto"> Object\n</string>
    <string name="toDo"> To do </string>
    <string name="archiviate"> Archived </string>
    <string name="aggiungi"> Add </string>
    <string name="annulla"> Cancel </string>
    <string name="modifica"> Update </string>
    <string name="dataCreazione"> Creation Date </string>
    <string name="dataModifica"> Date Modified</string>
    <string name="dataScadenza"> Deadline Date </string>
    <string name="status">Status</string>
    <string name="confirm"> Conferma </string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="special">Speciale</string>
    <string name="preferiti">Preferiti</string>
    <string name="deleteAll">Delete All</string>
    <string name="deleteAsk">Do you want to delete all?</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="draw">Draw</string>
</resources>
