<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp"
    android:layout_marginTop="5dp"
   android:layout_marginBottom="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataCreazione"
        android:id="@+id/item_creationDate_tv"
        android:layout_marginBottom="5dp"
        android:textSize="12dp"
        android:textColor="@color/colorIcons"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataScadenza"
        android:id="@+id/item_dataScadenza_tv"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:textSize="12dp"
        android:textColor="@color/colorIcons"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titolo"
        android:textSize="15dp"
        android:id="@+id/item_title_tv"
        android:textColor="@color/colorIcons"
        android:layout_below="@id/item_creationDate_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oggetto"
        android:id="@+id/item_object_tv"
        android:layout_below="@id/item_title_tv"
        android:textSize="15dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorIcons"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:id="@+id/item_status_tv"
        android:layout_below="@id/item_object_tv"
        android:textSize="10dp"
        android:textColor="@color/colorIcons"/>

</RelativeLayout>